plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.6'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id "io.freefair.lombok" version "6.6.1"
    id 'jacoco'
}
apply from: 'version.gradle'

group = 'ru.michaelshell'
version = '1.2.1'
sourceCompatibility = '17'

configurations {
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.telegram:telegrambots-spring-boot-starter:${versions.telegrambots}"
    implementation "org.telegram:telegrambots-chat-session-bot:${versions.tgsession}"
    implementation 'org.liquibase:liquibase-core'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.testcontainers:postgresql:${versions.testcontainers}"

}

test {
    useJUnitPlatform()
}

test.finalizedBy jacocoTestReport
jacocoTestReport.dependsOn test
